--- a/index.html
+++ b/index.html
@@ -4,16 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Puppy Pong Home Page</title>
-    <link rel="stylesheet" href="/PuppyPong/css/index.css">
+    <link rel="stylesheet" href="/css/index.css">
 </head>
 <body>
-    <img src="/PuppyPong/assets/images/howTo-Paw.png" alt="About" id="pawButtonOne">
+    <img src="/assets/images/howTo-Paw.png" alt="About" id="pawButtonOne">
     <h1> Puppy Pong </h1>
     <div id="puppyAnimationContainer">
-        <img src="/PuppyPong/assets/images/samoyRun.gif" alt="Samoyed Run GIF" id="samoyRun">
+        <img src="/assets/images/samoyRun.gif" alt="Samoyed Run GIF" id="samoyRun">
         <div id="movingGround">
-            <img src="/PuppyPong/assets/images/ground.png" alt="Ground" class="ground">
-            <img src="/PuppyPong/assets/images/ground.png" alt="Ground" class="ground">
+            <img src="/assets/images/ground.png" alt="Ground" class="ground">
+            <img src="/assets/images/ground.png" alt="Ground" class="ground">
         </div>
     </div>
    
@@ -24,7 +24,7 @@
             <span class="aboutText">
                 <div id="aboutHeader">
                     <h2> About </h2>
-                    <img src="/PuppyPong/assets/images/closeButton.png" alt="Exit Button" id="exitButton">
+                    <img src="/assets/images/closeButton.png" alt="Exit Button" id="exitButton">
                 </div>
         
                 <ol type="1">
@@ -51,6 +51,6 @@
         </div>
     </div>
  
-    <script src="/PuppyPong/js/buttons.js"></script>
+    <script src="/js/buttons.js"></script>
 </body>
 </html>
