--- a/assets/gamePage.html
+++ b/assets/gamePage.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Game Page</title>
-    <link rel="stylesheet" href="css/gamePage.css">
-    <link rel="stylesheet" href="css/popUps.css">
+    <link rel="stylesheet" href="../css/gamePage.css">
+    <link rel="stylesheet" href="../css/popUps.css">
 </head>
 <body>
     <div class="gameContainer">
@@ -41,8 +41,8 @@
         </section>
 
         <div class="gamePlay">
-            <img id="samoyChar" src="assets/images/samoyChar.png" alt="Puppy Image">
-            <img id="cliff" src="assets/images/cliff.png" alt="Cliff Image">
+            <img id="samoyChar" src="../assets/images/samoyChar.png" alt="Puppy Image">
+            <img id="cliff" src="../assets/images/cliff.png" alt="Cliff Image">
 
             <div id = "deathzone"> 
                 <span id= "player"></span>
@@ -55,6 +55,6 @@
         </div>
     </div>
     
-    <script src="js/gameFunction.js"></script>
+    <script src="../js/gameFunction.js"></script>
 </body>
 </html>
